Set correct css for visibility

--- a/assets/css/admin.less
+++ b/assets/css/admin.less
@@ -1378,10 +1378,10 @@ div.multi_select_products_wrapper {
 }
 .grouped_product {
 
-	.advanced_tab, .file_tab, .inventory_tab, .variable_tab, .grouped_tab {
+	.file_tab, .inventory_tab, .variable_tab, .grouped_tab {
 		display: none;
 	}
-	#price_fieldset {
+	#price_fieldset, #tax_fieldset, #form_fieldset {
 		display: none;
 	}
 }
